buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'org.ajoberstar:grgit:1.7.2'
    }
}

plugins {
    id 'java'
}

ext {
    git = org.ajoberstar.grgit.Grgit.open()
    rev = git.head().id
    rev = git.head().getAbbreviatedId(8)
    slf4jVersion = '1.7.25'
    jettyVersion = '9.4.12.v20180830'
    jerseyVersion = '2.27'
    logbackVersion = '1.2.3'
    bouncycastleVersion = '1.60'
    guavaVersion = '26.0-jre'
    jsonsimpleVersion = '1.1.1'
    commonsVersion = '3.6'
    springbootVersion = '2.0.4.RELEASE'
    springVersion = '5.0.8.RELEASE'
    junitVersion = '4.12'
}

group 'CryptoService'
version "1.0-${git.head().abbreviatedId}"

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

jar{
    manifest{
        attributes(
                'Main-Class':'Start',
                'Implementation-Title' : 'Gradle Build: ' + project.name,
                'Implementation-Version' : project.version,
                'Build-Time' : new Date().format("yyyy-MM-dd HH:mm:ssZ"),
                'Git-Commit' : rev,
                'Git-Branch' : git.branch.current.getName()
        )
    }
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    exclude('META-INF/*.SF')
    exclude('META-INF/*.DSA')
    exclude('META-INF/*.RSA')
}

//tasks.withType(JavaCompile) {
//    options.compilerArgs << '-Xlint:unchecked'
//    options.deprecation = true
//}

sourceSets {
    main {
        java {
            srcDir("src/main")
        }
    }
    test {
        java {
            srcDir("src/test")
        }
    }
}

dependencies {
    compile "org.slf4j:slf4j-api:${slf4jVersion}"
    compile "org.slf4j:slf4j-log4j12:${slf4jVersion}"
    //compile "org.slf4j:slf4j-simple:${slf4jVersion}"

    //compile "ch.qos.logback:logback-classic:${logbackVersion}"
    //compile "ch.qos.logback:logback-core:${logbackVersion}"

    compile "org.eclipse.jetty:jetty-server:${jettyVersion}"
    compile "org.eclipse.jetty:jetty-servlet:${jettyVersion}"

    compile "org.glassfish.jersey.core:jersey-server:${jerseyVersion}"
    compile "org.glassfish.jersey.containers:jersey-container-servlet-core:${jerseyVersion}"
    compile "org.glassfish.jersey.containers:jersey-container-jetty-http:${jerseyVersion}"
    compile "org.glassfish.jersey.media:jersey-media-multipart:${jerseyVersion}"
    compile "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"

    compile "org.bouncycastle:bcprov-jdk15on:${bouncycastleVersion}"
    compile "com.google.guava:guava:${guavaVersion}"
    compile "com.googlecode.json-simple:json-simple:${jsonsimpleVersion}"
    compile "commons-net:commons-net:${commonsVersion}"

    compile "org.springframework.boot:spring-boot:${springbootVersion}"
    compile "org.springframework:spring-webmvc:${springVersion}"

    testCompile "junit:junit:${junitVersion}"
}
